{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 720,
  "lineage": "4226ce2f-f81c-43d6-b758-4620a267fdea",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "ip_address1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.202.98.73",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2019-09-06T04:23:40.873-07:00",
            "id": "script-project-249010/us-central1/ip-address1",
            "name": "ip-address1",
            "network_tier": "PREMIUM",
            "project": "script-project-249010",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/script-project-249010/regions/us-central1/addresses/ip-address1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "ip_address2",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "104.154.213.154",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2019-09-06T04:23:40.870-07:00",
            "id": "script-project-249010/us-central1/ip-address2",
            "name": "ip-address2",
            "network_tier": "PREMIUM",
            "project": "script-project-249010",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/script-project-249010/regions/us-central1/addresses/ip-address2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-09-06T04:23:56.701-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "dev-ingress-firewall",
            "name": "dev-ingress-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/script-project-249010/global/networks/dev-vpc",
            "priority": 1000,
            "project": "script-project-249010",
            "self_link": "https://www.googleapis.com/compute/v1/projects/script-project-249010/global/firewalls/dev-ingress-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall2",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-09-06T04:23:56.776-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "id": "dev-egress-firewall",
            "name": "dev-egress-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/script-project-249010/global/networks/dev-vpc",
            "priority": 1000,
            "project": "script-project-249010",
            "self_link": "https://www.googleapis.com/compute/v1/projects/script-project-249010/global/firewalls/dev-egress-firewall",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall3",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-09-06T04:23:56.855-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "prod-ingress-firewall",
            "name": "prod-ingress-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/script-project-249010/global/networks/prod-vpc",
            "priority": 1000,
            "project": "script-project-249010",
            "self_link": "https://www.googleapis.com/compute/v1/projects/script-project-249010/global/firewalls/prod-ingress-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall4",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-09-06T04:23:56.782-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "id": "prod-egress-firewall",
            "name": "prod-egress-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/script-project-249010/global/networks/prod-vpc",
            "priority": 1000,
            "project": "script-project-249010",
            "self_link": "https://www.googleapis.com/compute/v1/projects/script-project-249010/global/firewalls/prod-egress-firewall",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "fr_esp",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "creation_timestamp": "2019-09-06T04:24:00.753-07:00",
            "id": "fr-esp",
            "ip_address": "35.202.98.73",
            "ip_protocol": "ESP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fr-esp",
            "network_tier": "PREMIUM",
            "project": "script-project-249010",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/script-project-249010/regions/us-central1/forwardingRules/fr-esp",
            "target": "https://www.googleapis.com/compute/v1/projects/script-project-249010/regions/us-central1/targetVpnGateways/vpn-gateway-1"
          },
          "depends_on": [
            "google_compute_address.ip_address1",
            "google_compute_vpn_gateway.gateway1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "fr_esp-1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "creation_timestamp": "2019-09-06T04:24:06.853-07:00",
            "id": "fr-esp-1",
            "ip_address": "104.154.213.154",
            "ip_protocol": "ESP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fr-esp-1",
            "network_tier": "PREMIUM",
            "project": "script-project-249010",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/script-project-249010/regions/us-central1/forwardingRules/fr-esp-1",
            "target": "https://www.googleapis.com/compute/v1/projects/script-project-249010/regions/us-central1/targetVpnGateways/vpn-gateway-2"
          },
          "depends_on": [
            "google_compute_address.ip_address2",
            "google_compute_vpn_gateway.gateway2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "fr_udp4500",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "creation_timestamp": "2019-09-06T04:24:01.441-07:00",
            "id": "fr-udp4500",
            "ip_address": "35.202.98.73",
            "ip_protocol": "UDP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fr-udp4500",
            "network_tier": "PREMIUM",
            "port_range": "4500-4500",
            "project": "script-project-249010",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/script-project-249010/regions/us-central1/forwardingRules/fr-udp4500",
            "target": "https://www.googleapis.com/compute/v1/projects/script-project-249010/regions/us-central1/targetVpnGateways/vpn-gateway-1"
          },
          "depends_on": [
            "google_compute_address.ip_address1",
            "google_compute_vpn_gateway.gateway1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "fr_udp4500-1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "creation_timestamp": "2019-09-06T04:24:09.397-07:00",
            "id": "fr-udp4500-1",
            "ip_address": "104.154.213.154",
            "ip_protocol": "UDP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fr-udp4500-1",
            "network_tier": "PREMIUM",
            "port_range": "4500-4500",
            "project": "script-project-249010",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/script-project-249010/regions/us-central1/forwardingRules/fr-udp4500-1",
            "target": "https://www.googleapis.com/compute/v1/projects/script-project-249010/regions/us-central1/targetVpnGateways/vpn-gateway-2"
          },
          "depends_on": [
            "google_compute_address.ip_address2",
            "google_compute_vpn_gateway.gateway2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "fr_udp500",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "creation_timestamp": "2019-09-06T04:24:02.762-07:00",
            "id": "fr-udp500",
            "ip_address": "35.202.98.73",
            "ip_protocol": "UDP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fr-udp500",
            "network_tier": "PREMIUM",
            "port_range": "500-500",
            "project": "script-project-249010",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/script-project-249010/regions/us-central1/forwardingRules/fr-udp500",
            "target": "https://www.googleapis.com/compute/v1/projects/script-project-249010/regions/us-central1/targetVpnGateways/vpn-gateway-1"
          },
          "depends_on": [
            "google_compute_address.ip_address1",
            "google_compute_vpn_gateway.gateway1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "fr_udp500-1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "creation_timestamp": "2019-09-06T04:24:12.982-07:00",
            "id": "fr-udp500-1",
            "ip_address": "104.154.213.154",
            "ip_protocol": "UDP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fr-udp500-1",
            "network_tier": "PREMIUM",
            "port_range": "500-500",
            "project": "script-project-249010",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/script-project-249010/regions/us-central1/forwardingRules/fr-udp500-1",
            "target": "https://www.googleapis.com/compute/v1/projects/script-project-249010/regions/us-central1/targetVpnGateways/vpn-gateway-2"
          },
          "depends_on": [
            "google_compute_address.ip_address2",
            "google_compute_vpn_gateway.gateway2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "compute-1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20190813",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/script-project-249010/zones/us-central1-a/disks/dev-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "dev-instance",
            "instance_id": "4844443720182923038",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "vynhSBx2II4=",
            "name": "dev-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.194.48.167",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/script-project-249010/global/networks/dev-vpc",
                "network_ip": "10.10.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/script-project-249010/regions/us-central1/subnetworks/dev-subnet",
                "subnetwork_project": "script-project-249010"
              }
            ],
            "project": "script-project-249010",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "scratch_disk": [
              {
                "interface": "SCSI"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/script-project-249010/zones/us-central1-a/instances/dev-instance",
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "depends_on": [
            "google_compute_network.vpc1",
            "google_compute_subnetwork.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "compute-2",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20190813",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/script-project-249010/zones/us-central1-a/disks/prod-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "prod-instance",
            "instance_id": "4550805688147771186",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "vynhSBx2II4=",
            "name": "prod-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.192.222.123",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/script-project-249010/global/networks/prod-vpc",
                "network_ip": "10.10.1.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/script-project-249010/regions/us-central1/subnetworks/prod-subnet",
                "subnetwork_project": "script-project-249010"
              }
            ],
            "project": "script-project-249010",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "scratch_disk": [
              {
                "interface": "SCSI"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/script-project-249010/zones/us-central1-a/instances/prod-instance",
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "depends_on": [
            "google_compute_network.vpc2",
            "google_compute_subnetwork.subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "dev-vpc",
            "name": "dev-vpc",
            "project": "script-project-249010",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/script-project-249010/global/networks/dev-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc2",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "prod-vpc",
            "name": "prod-vpc",
            "project": "script-project-249010",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/script-project-249010/global/networks/prod-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-09-06T04:23:56.831-07:00",
            "enable_flow_logs": false,
            "fingerprint": "pfa_vtA9fUI=",
            "gateway_address": "10.10.0.1",
            "id": "us-central1/dev-subnet",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "dev-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/script-project-249010/global/networks/dev-vpc",
            "private_ip_google_access": false,
            "project": "script-project-249010",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/script-project-249010/regions/us-central1/subnetworks/dev-subnet"
          },
          "depends_on": [
            "google_compute_network.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet2",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-09-06T04:23:56.815-07:00",
            "enable_flow_logs": false,
            "fingerprint": "OwRgb-uG7Eo=",
            "gateway_address": "10.10.1.1",
            "id": "us-central1/prod-subnet",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "prod-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/script-project-249010/global/networks/prod-vpc",
            "private_ip_google_access": false,
            "project": "script-project-249010",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/script-project-249010/regions/us-central1/subnetworks/prod-subnet"
          },
          "depends_on": [
            "google_compute_network.vpc2"
          ]
        }
      ]
    }
  ]
}